# records-sop

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE  cabal.project  record-subtyping.cabal  records-sop.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/: Record.hs  SubTyping.hs
src/Generics/SOP/: Record.hs
src/Generics/SOP/Record/: SubTyping.hs
tests/: Examples.hs
