name: records-sop
version: 0.1
cabal-version: >= 1.10
build-type: Simple
tested-with: GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.1, GHC == 8.3.*

library
  hs-source-dirs:
    src
  exposed-modules:
    Generics.SOP.Record,
    Generics.SOP.Record.SubTyping
  build-depends:
    base >= 4.9 && < 5.0,
    generics-sop >= 0.3 && < 0.4,
    ghc-prim >= 0.5 && < 0.6
  default-language:
    Haskell2010

test-suite examples
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Examples.hs
  build-depends:
    base >= 4.9 && < 5.0,
    deepseq >= 1.4 && < 1.5,
    hspec >= 2.2 && < 2.5,
    generics-sop >= 0.3 && < 0.4,
    records-sop,
    should-not-typecheck >= 2.1 && < 2.2
  default-language:
    Haskell2010
